kubernetes/ingress/payment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ingress
  namespace: card-processing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx

  rules:
  - host: payment.bank.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: payment-api-service
            port:
              number: 8080
